borenfam: Fix overflow menu going off-screen.
 * Picture caption was too long.

--- a/static/res/css/style.css
+++ b/static/res/css/style.css
@@ -52,6 +52,7 @@
 	font-family: 'Trebuchet MS', 'Myriad Pro', Arial, sans-serif;
 	line-height:16px;
 	padding:0 15px;
+    word-wrap: break-word;
 }
 .rg-view{
 	height:30px;
